TrojanServ Module for NeoStats Changelog.
==============================================================================
0.9.2 - Fish - 03 June, 2003
 - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
 - Fixed a type on the set verbose on message. 

0.9.1 - Fish - 25 May, 2003
 - Onjoin bot wasn't checking the last Onjoin Definition. Fixed. 
 - Fixed a problem with Matched channels in new_chan code. Re-Arranged Join_Chan code instead.
 - Fixed a problem with "Definitions count" after a update
 - AutoUpgrade now works
 - Messages recieved by the onjoinbot are now dumped into the logfile
 - Fixed a problem with restoring some string settings
 - Updated a bit the Channel Flood Checking. Now also checks the TS of the server to determine if its a flood.
 - NickFlood Checking is now Enabled
 - Changed the order of gotpositive to svsjoin/akill/warn/nothing