@@ -3,6 +3,9 @@ TrojanServ Module for NeoStats Changelog.
 0.9.2 - Fish - 03 June, 2003
  - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
  - Fixed a type on the set verbose on message. 
+ - Fixed DoOnJoin Setting. 
+ - Added new option to not join Private Channels
+ - fixed a bug with trying to signoff virtual bots after they had already been signed off!
 
 0.9.1 - Fish - 25 May, 2003
  - Onjoin bot wasn't checking the last Onjoin Definition. Fixed. 
